Fix Java 8 incompatibilities